Finilize first version of vignette "Getting Started".

--- a/vignettes/powerNLSEM.Rmd
+++ b/vignettes/powerNLSEM.Rmd
@@ -36,17 +36,167 @@ library(powerNLSEM)
 
 ## Write Model
 
-The `powerNLSEM` packages uses `lavaan` syntax (Rosseel, 2012)
+The `powerNLSEM` packages uses `lavaan` syntax (Rosseel, 2012) to describe the model including population values:
+
+```{r}
+model <- "
+# measurement models
+X =~ 1*x1 + 0.8*x2 + 0.7*x3
+Y =~ 1*y1 + 0.85*y2 + 0.78*y3
+Z =~ 1*z1 + 0.9*z2 + 0.6*z3
+
+# structural models
+Y ~ 0.3*X + .2*Z +  .2*X:Z
+
+# residual variances
+Y~~.7975*Y
+X~~1*X
+Z~~1*Z
+
+# covariances
+X~~0.5*Z
+
+# measurement error variances
+x1~~.1*x1
+x2~~.2*x2
+x3~~.3*x3
+z1~~.2*z1
+z2~~.3*z2
+z3~~.4*z3
+y1~~.5*y1
+y2~~.4*y2
+y3~~.3*y3
+"
+```
+
+All parameters in the model are given by the user, otherwise `lavaan`'s defaults are used. These are `1` for variances, `0.5` for covariance and `0` for all other coefficients. Hence, not stating a coefficient will result in zero-effects for which the power is just the level of significance ($\alpha$ or the type-I error). 
+
+Interactions among latent variables have not yet been included into `lavaan` (version 0.6.13), which is why this is handeled by the `powerNLSEM` package by translating the syntax into syntax for which nonlinear models can be estimated. For now these are `LMS` (latent moderated structured equation, Klein & Moosbrugger, 2000), which needs an installation of `Mplus` (Muthén & Muthén, 1998-2017), `UPI` (unconstrained product indicator approach, Marsh et al., 2004, Kelava & Brandt, 2009), which further makes use of the `semTools` package (Jorgensen et al., 2022) to compute the product indicators in a matched or unmatched way (including different ways of centering the indicators) and a scale mean regression based path analysis where the latent variables are collapsed to means of the indicators per latent variables and path analysis is used to fit the NLSEM.
+
+```{r, echo = F}
+cat("# structural models
+Y ~ 0.3*X + .2*Z +  .2*X:Z
+
+# residual variances
+Y~~.7975*Y")
+
+```
+
+States the structural model of the NLSEM as $Y=.3X + .2Z + .2XZ + \varepsilon_Y$, where $\varepsilon_Y\sim\mathcal{N}(0,.7975)$, i.e., the variance $\mathbb{V}ar[\varepsilon_Y]=.7975$. We are interested how large the sample size needs to be for a power of 80% for the three regression coefficients. We will use the smart search algorithm to find the necessary sample size.
+
+### Smart Search
+
+After stating the model, we can use the `powerNLSEM` function to use a smart search algorithm to find the optimal sample size for our desired power for a given type I-error rate. For computational reasons we will use the scale regression approach to examplify the use of the function with a very small number of replications: 
+
+```{r, results = "hide"}
+Result_Power <- powerNLSEM(model = model, POI = c("Y~X", "Y~Z", "Y~X:Z"), method = "sr",
+                           search_method = "smart", steps = 10, power_modeling_method = "logit",
+                           Ntotal = 2000, power_aim = .8, alpha = .05, CORES = 1, verbose = T,
+                           seed = 2023)
+```
+
+```{r, echo = F}
+cat("Initiating smart search to find simulation based N for power of 0.8 within 10 steps
+and in total 2000 replications. Ns are drawn randomly...
+Step 1 of 10. Fitting 333 models with Ns in [205, 615].
+  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=05s  
+Step 2 of 10. Fitting 267 models with Ns in [110, 342].
+  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=03s  
+Step 3 of 10. Fitting 200 models with Ns in [49, 311].
+  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=03s  
+Step 4 of 10. Fitting 133 models with Ns in [41, 320].
+  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=02s  
+Step 5 of 10. Fitting 67 models with Ns in [41, 319].
+  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=01s  
+Step 6 of 10. Fitting 67 models with Ns in [41, 316].
+  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=01s  
+Step 7 of 10. Fitting 133 models with Ns in [198, 382].
+  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=02s  
+Step 8 of 10. Fitting 200 models with Ns in [206, 342].
+  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=03s  
+Step 9 of 10. Fitting 267 models with Ns in [219, 318].
+  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=04s  
+Step 10 of 10. Fitting 333 models with Ns in [232, 295].
+  |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=05s ")
+```
+
+The argument `model` is given our previously stated model in `lavaan`-syntax, `POI` describe the **P**arameters **O**f **I**nterest (here we are interested in the power of the linear effect of `X` and `Z` on `Y` and the interaction between `X:Z` on `Y`, namely all the structural effects within the model, therefore `POI = c("Y~X", "Y~Z", "Y~X:Z")`), the `method` is choosen to be `"sr"`, which indicates that the latent variables should be collapsed to means (this is a very loose approximation of the latent variable, which can be arbitrarily wrong and is used for demonstration purposes here [[CHECK THIS!!!!!! WRITE MORE]]), `search_method` is choosen to be `"smart"`, an alternative would be `"bruteforce"` (see documentation for more details), 10 smart search `steps` are chosen with a `power_modeling_method` of `"logit"`, which means the significance decisions per parameter are modeled via a logistic regression model (see Schoemann, et al., 2014).  `Ntotal` is the total number of models fitted (here 2000 is rather small, this number should be increased for higher precision). `power_aim` is the desired power level (here 0.8), `alpha` is the corresponding type I-error rate (level of significance, here 0.05), `CORES` are the number of computer cpu cores used to estimate the models (here 1 is chosen, this number should be increased to reduce runtime). `verbose` is a logical indicating whether to print information on the search algorithm in the console. used  As this is a random search algorithm, we need to set a seed for comparison: `seed`.
+
+The output object `Result_Power` is a list with the following objects:
+
+```{r}
+names(Result_Power)
+```
 
 
+```{r}
+Result_Power$N
+```
+
+is the necessary sample size to ensure that the power is $\ge .8$.
+
+```{r}
+dim(Result_Power$SigDecisions) # dimensions
+head(Result_Power$SigDecisions) # first 6 rows
+```
+
+is the data.frame including all significance descisions for every `POI`.
+
+```{r}
+Result_Power$N_trials
+```
+are the calculated necessary sample sizes within every step of the smart search algorithm. This can be used for diagnistics and to check whether the algorithm has converged.
+
+```{r}
+Result_Power$power
+Result_Power$beta
+Result_Power$alpha
+```
+are the desired power level, the corresponding beta-error level (type II-error level: $\beta=\mathbb{P}(H_0|H_1)$, since Power = $1-\beta = \mathbb{P}(H_1 | H_1)$) and the desired alpha-error level (type I-error level: $\alpha=\mathbb{P}(H_1|H_0)$).
+
+```{r}
+Result_Power$search_method
+Result_Power$power_modeling_method
+Result_Power$runtime
+Result_Power$seed
+```
+
+include information on the search algorithm (here smart search, could also be "bruteforce"), the chosen method to model the power (here logit, i.e., logistic regression model), the runtime and the seed used for replicability.
+
+### Plots
+
+The `powerNLSEM` package offers several plots, which visualize the power:
+
+```{r}
+plot(Result_Power)
+```
+
+plots the model implied power for the `POI` vs. sample size `N`. The vertical line indicates the necessary sample size found be the smart search algorithm. The horizontal line indicates the desired power level.
+
+ 
+```{r}
+plot(Result_Power, se = T)
+```
+
+Within this plot the standard errors of the `power_modeling_method` are included into the plot.
+
+```{r}
+plot(Result_Power, se = T, plot = "empirical")
+```
+
+plots the empirical power per sample size and fits a LOESS fit to the resulting data.
+All plots indicate that the linear effect of Z has the smallest power.
 
 ## Literature
 
+Jorgensen, T. D., Pornprasertmanit, S., Schoemann, A. M., & Rosseel, Y. (2022). `semTools`: Useful tools for structural equation modeling. R package version 0.5-6. Retrieved from [https://CRAN.R-project.org/package=semTools](https://CRAN.R-project.org/package=semTools)
 
-Kelava, A., & Brandt, H. (2009). Estimation of nonlinear latent structural equation models using the extended unconstrained approach. Review of Psychology, 16(2), 123–131.
+Kelava, A., & Brandt, H. (2009). Estimation of nonlinear latent structural equation models using the extended unconstrained approach. _Review of Psychology, 16_(2), 123–131.
 
-Klein, A. G., & Moosbrugger, H. (2000). Maximum likelihood estimation of latent interaction effects with the LMS method. Psychometrika, 65(4), 457–474. [https://doi:10.1007/BF02296338](https://doi:10.1007/BF02296338)
+Klein, A. G., & Moosbrugger, H. (2000). Maximum likelihood estimation of latent interaction effects with the LMS method. _Psychometrika, 65_(4), 457–474. [https://doi:10.1007/BF02296338](https://doi:10.1007/BF02296338)
 
+Muthén, L., & Muthén, B. (1998-2017). _Mplus user’s guide (Eighth ed.)_. Los Angeles, CA: Muthén & Muthén.
 
+Rosseel, Y. (2012). lavaan: An R package for structural equation modeling. _Journal of Statistical Software, 48_(2), 1–36.
 
-Muthén, L., & Muthén, B. (1998-2017). Mplus user’s guide (Eighth ed.). Los Angeles, CA: Muthén & Muthén.
+Schoemann, A. M., Miller, P., Pornprasertmanit, S., & Wu, W. (2014). Using Monte Carlo simulations to determine power and sample size for planned missing designs. _International Journal of Behavioral Development, 38_(5) 471–479. [https://doi:10.1177/0165025413515169](https://doi:10.1177/0165025413515169)
