--- a/vignettes/powerNLSEM.Rmd
+++ b/vignettes/powerNLSEM.Rmd
@@ -15,7 +15,8 @@ knitr::opts_chunk$set(
 )
 ```
 
-This is an `R` package to use a model implied fit function to find the minimum sample size for a given power within a nonlinear Structural Equation Model (NLSEM) for several parameters of interest (POI). The package was created as a supplement to the publication **INSERT PUBLICATION HERE: Irmer et al. (2023)**.
+This is an `R` package to use a model implied fit function to find the minimum sample size for a given power within a nonlinear Structural Equation Model (NLSEM) for several parameters of interest (POI). 
+<!-- The package was created as a supplement to the publication **INSERT PUBLICATION HERE: Irmer et al. (2023)**. -->
 
 ## Install the latest working version from Github
 This requires the package `devtools`.
@@ -79,7 +80,6 @@ Y ~ 0.3*X + .2*Z +  .2*X:Z
 
 # residual variances
 Y~~.7975*Y")
-
 ```
 
 States the structural model of the NLSEM as $Y=.3X + .2Z + .2XZ + \varepsilon_Y$, where $\varepsilon_Y\sim\mathcal{N}(0,.7975)$, i.e., the variance $\mathbb{V}ar[\varepsilon_Y]=.7975$. We are interested how large the sample size needs to be for a power of 80% for the three regression coefficients. We will use the smart search algorithm to find the necessary sample size.
@@ -89,9 +89,9 @@ States the structural model of the NLSEM as $Y=.3X + .2Z + .2XZ + \varepsilon_Y$
 After stating the model, we can use the `powerNLSEM` function to use a smart search algorithm to find the optimal sample size for our desired power for a given type I-error rate. For computational reasons we will use the scale regression approach to examplify the use of the function with a very small number of replications: 
 
 ```{r, warning=FALSE,error=FALSE}
-Result_Power <- powerNLSEM(model = model, POI = c("Y~X", "Y~Z", "Y~X:Z"), method = "sr",
-                           search_method = "smart", steps = 10, power_modeling_method = "logit",
-                           Ntotal = 1000, power_aim = .8, alpha = .05, CORES = 1, verbose = T,
+Result_Power <- powerNLSEM(model = model, POI = c("Y~X", "Y~Z", "Y~X:Z"), method = "UPI",
+                           search_method = "smart", steps = 10, power_modeling_method = "probit",
+                           R = 1000, power_aim = .8, alpha = .05, CORES = 1, verbose = T,
                            seed = 2023)
 ```
 
@@ -120,7 +120,7 @@ Result_Power <- powerNLSEM(model = model, POI = c("Y~X", "Y~Z", "Y~X:Z"), method
 <!--   |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=05s ") -->
 <!-- ``` -->
 
-The argument `model` is given our previously stated model in `lavaan`-syntax, `POI` describe the **P**arameters **O**f **I**nterest (here we are interested in the power of the linear effect of `X` and `Z` on `Y` and the interaction between `X:Z` on `Y`, namely all the structural effects within the model, therefore `POI = c("Y~X", "Y~Z", "Y~X:Z")`), the `method` is choosen to be `"sr"`, which indicates that the latent variables should be collapsed to means (this is a very loose approximation of the latent variable, which can be arbitrarily wrong and is used for demonstration purposes here **[[CHECK THIS!!!!!! WRITE MORE]]**), `search_method` is choosen to be `"smart"`, an alternative would be `"bruteforce"` (see documentation for more details), 10 smart search `steps` are chosen with a `power_modeling_method` of `"logit"`, which means the significance decisions per parameter are modeled via a logistic regression model (see Schoemann, et al., 2014).  `Ntotal` is the total number of models fitted (here 1000 is very small, this number should be increased for higher precision, values much smaller may create unwanted behaviour of the search algorithm as the power-model might be to plane). `power_aim` is the desired power level (here 0.8), `alpha` is the corresponding type I-error rate (level of significance, here 0.05), `CORES` are the number of computer cpu cores used to estimate the models (here 1 is chosen, this number should be increased to reduce runtime). `verbose` is a logical indicating whether to print information on the search algorithm in the console. used  As this is a random search algorithm, we need to set a seed for comparison: `seed`.
+The argument `model` is given our previously stated model in `lavaan`-syntax, `POI` describe the **P**arameters **O**f **I**nterest (here we are interested in the power of the linear effect of `X` and `Z` on `Y` and the interaction between `X:Z` on `Y`, namely all the structural effects within the model, therefore `POI = c("Y~X", "Y~Z", "Y~X:Z")`), the `method` is choosen to be `"UPI"`, which indicates that the unconstrained product indicator approach should be used (Marsh et al., 2004, Kelava & Brandt, 2009), `search_method` is choosen to be `"smart"`, an alternative would be `"bruteforce"` (see documentation for more details), 10 smart search `steps` are chosen with a `power_modeling_method` of `"probit"`, which means the significance decisions per parameter are modeled via a probit regression model. `R` is the total number of replications fitted (here 1000 is small, this number should be increased for higher precision, values much smaller may create unwanted behaviour of the search algorithm as the power-model might be to plane). `power_aim` is the desired power level (here 0.8) for which the smart algorithm is optimized (and for which the $N$ is found), `alpha` is the corresponding type I-error rate (level of significance, here 0.05), `CORES` are the number of computer cpu cores used to estimate the models (here 1 is chosen, this number should be increased to reduce runtime). `verbose` is a logical indicating whether to print information on the search algorithm in the console.  As this is a random search algorithm, we need to set a seed for comparison: `seed`.
 
 The output object `Result_Power` is a list with the following objects:
 
@@ -136,11 +136,27 @@ Result_Power$N
 is the necessary sample size to ensure that the power is $\ge .8$.
 
 ```{r}
-dim(Result_Power$SigDecisions) # dimensions
-head(Result_Power$SigDecisions) # first 6 rows
+dim(Result_Power$est) # dimensions
+head(Result_Power$est) # first 6 rows
 ```
 
-is the data.frame including all significance descisions for every `POI`.
+is the data.frame including all parameter estimates from which the significance decision are computed using the corresponding standard errors in
+
+```{r}
+head(Result_Power$se) # first 6 rows
+```
+
+```{r}
+head(Result_Power$fitOK)
+```
+is a vector of logicals indicating whether the models converged and the results are trustworthy to be used in power modeling with
+
+```{r}
+Result_Power$convergenceRate
+```
+
+being the convergence rate.
+
 
 ```{r}
 Result_Power$N_trials
@@ -158,10 +174,11 @@ are the desired power level, the corresponding beta-error level (type II-error l
 Result_Power$search_method
 Result_Power$power_modeling_method
 Result_Power$runtime
-Result_Power$seed
+Result_Power$seeds$seed
+head(Result_Power$seeds$sim_seeds)
 ```
 
-include information on the search algorithm (here smart search, could also be "bruteforce"), the chosen method to model the power (here logit, i.e., logistic regression model), the runtime and the seed used for replicability.
+include information on the search algorithm (here "smart" search, could also be "bruteforce"), the chosen method to model the power (here "probit", i.e., probit regression model), the runtime, the general seed and the seeds used within each simulation (for replicability of e.g., non-convergences, etc.) used for replicability.
 
 ### Plots
 
@@ -175,13 +192,13 @@ plots the model implied power for the `POI` vs. sample size `N`. The vertical li
 
  
 ```{r, fig.width=7, fig.height=5, fig.align='center'}
-plot(Result_Power, se = T)
+plot(Result_Power, se = TRUE)
 ```
 
 Within this plot the standard errors of the `power_modeling_method` are included into the plot.
 
 ```{r, fig.width=7, fig.height=5, fig.align='center'}
-plot(Result_Power, se = T, plot = "empirical")
+plot(Result_Power, se = TRUE, plot = "empirical")
 ```
 
 plots the empirical power per sample size and fits a LOESS fit to the resulting data.
