--- a/vignettes/powerNLSEM.Rmd
+++ b/vignettes/powerNLSEM.Rmd
@@ -174,8 +174,8 @@ are the desired power level, the corresponding beta-error level (type II-error l
 Result_Power$search_method
 Result_Power$power_modeling_method
 Result_Power$runtime
-Result_Power$seeds$seed
-head(Result_Power$seeds$sim_seeds)
+Result_Power$seed # general seed
+head(Result_Power$args$seeds) # seeds within each simulation
 ```
 
 include information on the search algorithm (here "smart" search, could also be "bruteforce"), the chosen method to model the power (here "probit", i.e., probit regression model), the runtime, the general seed and the seeds used within each simulation (for replicability of e.g., non-convergences, etc.) used for replicability.
@@ -206,14 +206,15 @@ All plots indicate that the linear effect of Z has the smallest power.
 
 ## Literature
 
-Jorgensen, T. D., Pornprasertmanit, S., Schoemann, A. M., & Rosseel, Y. (2022). `semTools`: Useful tools for structural equation modeling. R package version 0.5-6. Retrieved from [https://CRAN.R-project.org/package=semTools](https://CRAN.R-project.org/package=semTools)
+Jorgensen, T. D., Pornprasertmanit, S., Schoemann, A. M., & Rosseel, Y. (2022). _`semTools`: Useful tools for structural equation modeling_. R package version 0.5-6. Retrieved from [https://CRAN.R-project.org/package=semTools](https://CRAN.R-project.org/package=semTools)
 
 Kelava, A., & Brandt, H. (2009). Estimation of nonlinear latent structural equation models using the extended unconstrained approach. _Review of Psychology, 16_(2), 123–131.
 
 Klein, A. G., & Moosbrugger, H. (2000). Maximum likelihood estimation of latent interaction effects with the LMS method. _Psychometrika, 65_(4), 457–474. [https://doi:10.1007/BF02296338](https://doi:10.1007/BF02296338)
 
+Marsh, H. W., Wen, Z. & Hau, K. T. (2004). Structural equation models of latent interactions: Evaluation of alternative estimation strategies and indicator construction. _Psychological Methods, 9_(3), 275–300. <https://doi.org/10.1037/1082-989X.9.3.275>
+
+
 Muthén, L., & Muthén, B. (1998-2017). _Mplus user’s guide (Eighth ed.)_. Los Angeles, CA: Muthén & Muthén.
 
 Rosseel, Y. (2012). lavaan: An R package for structural equation modeling. _Journal of Statistical Software, 48_(2), 1–36.
-
-Schoemann, A. M., Miller, P., Pornprasertmanit, S., & Wu, W. (2014). Using Monte Carlo simulations to determine power and sample size for planned missing designs. _International Journal of Behavioral Development, 38_(5) 471–479. [https://doi:10.1177/0165025413515169](https://doi:10.1177/0165025413515169)
