--- a/vignettes/powerNLSEM.Rmd
+++ b/vignettes/powerNLSEM.Rmd
@@ -383,7 +383,7 @@ Jorgensen, T. D., Pornprasertmanit, S., Schoemann, A. M., & Rosseel, Y. (2022). 
 
 Kelava, A., & Brandt, H. (2009). Estimation of nonlinear latent structural equation models using the extended unconstrained approach. _Review of Psychology, 16_(2), 123–131.
 
-Klein, A. G., & Moosbrugger, H. (2000). Maximum likelihood estimation of latent interaction effects with the LMS method. _Psychometrika, 65_(4), 457–474. [https://doi:10.1007/BF02296338](https://doi:10.1007/BF02296338)
+Klein, A. G., & Moosbrugger, H. (2000). Maximum likelihood estimation of latent interaction effects with the LMS method. _Psychometrika, 65_(4), 457–474. <https://doi.org/10.1007/BF02296338>
 
 Marsh, H. W., Wen, Z. & Hau, K. T. (2004). Structural equation models of latent interactions: Evaluation of alternative estimation strategies and indicator construction. _Psychological Methods, 9_(3), 275–300. <https://doi.org/10.1037/1082-989X.9.3.275>
 
@@ -392,6 +392,6 @@ Muthén, L., & Muthén, B. (1998-2017). _Mplus user’s guide (Eighth ed.)_. Los
 
 Pornprasertmanit, S., Miller, P., Schoemann, A. M., Jorgensen, T. D. (2021). _simsem: SIMulated Structural Equation Modeling_. R package version 0.5-16, <https://CRAN.R-project.org/package=simsem>.
 
-Rosseel, Y. (2012). lavaan: An R package for structural equation modeling. _Journal of Statistical Software, 48_(2), 1–36.
+Rosseel, Y. (2012). lavaan: An R package for structural equation modeling. _Journal of Statistical Software, 48_(2), 1–36. <https://doi.org/10.18637/jss.v048.i02>
 
 Skrondal, A., & Laake, P. (2001). Regression among factor scores. _Psychometrika, 66_(4), 563-575. <https://doi.org/10.1007/BF02296196>
