--- a/vignettes/powerNLSEM.Rmd
+++ b/vignettes/powerNLSEM.Rmd
@@ -24,10 +24,10 @@ This requires the package `devtools`.
 
 ```{r, eval=FALSE}
 install.packages("devtools")
-devtools::install_github("jpirmer/powerNLSEM", build_vignettes = T)
+devtools::install_github("jpirmer/powerNLSEM", build_vignettes = TRUE)
 ```
 
-Use `build_vignettes = T` to be able to see the documentation linked in "Getting Started". 
+Use `build_vignettes = TRUE` to be able to see the documentation linked in "Getting Started". 
 
 Load the package:
 
@@ -87,13 +87,21 @@ States the structural model of the NLSEM as $Y=.3X + .2Z + .2XZ + \varepsilon_Y$
 
 ### Adaptive Search
 
-After stating the model, we can use the `powerNLSEM` function to use the adaptive search algorithm to find the optimal sample size for our desired power for a given Type I error rate. For computational reasons we will use the scale regression approach to examplify the use of the function with a very small number of replications: 
+After stating the model, we can use the `powerNLSEM` function to use the adaptive search algorithm to find the optimal sample size for our desired power for a given Type I error rate for our latent moderation model using the product indicator approach (UPI, with matched products). For computational reasons a very small number of replications is used and only two steps are utilized (for further information see also Irmer et al., in press): 
 
-```{r, warning=FALSE,error=FALSE}
-Result_Power <- powerNLSEM(model = model, POI = c("Y~X", "Y~Z", "Y~X:Z"), method = "UPI",
-                           search_method = "adaptive", steps = 10, power_modeling_method = "probit",
-                           R = 1000, power_aim = .8, alpha = .05, alpha_power_modeling = .05,
-                           CORES = 1, seed = 2024)
+```{r, warning=FALSE,error=FALSE, eval=TRUE, warning=FALSE}
+Result_Power <- powerNLSEM(model = model, 
+                           POI = c("Y~X", "Y~Z", "Y~X:Z"), 
+                           method = "UPI",
+                           search_method = "adaptive", 
+                           steps = 2, # for computational reasons, better >= 10
+                           power_modeling_method = "probit",
+                           R = 200, # for computational reasons, better >= 2000
+                           power_aim = .8, 
+                           alpha = .05, 
+                           alpha_power_modeling = .05,
+                           CORES = 1, 
+                           seed = 2024)
 ```
 
 <!-- ```{r, echo = F} -->
@@ -121,7 +129,7 @@ Result_Power <- powerNLSEM(model = model, POI = c("Y~X", "Y~Z", "Y~X:Z"), method
 <!--   |++++++++++++++++++++++++++++++++++++++++++++++++++| 100% elapsed=05s ") -->
 <!-- ``` -->
 
-The argument `model` is given our previously stated model in `lavaan`-syntax, `POI` describe the **P**arameters **O**f **I**nterest (here we are interested in the power of the linear effect of `X` and `Z` on `Y` and the interaction between `X:Z` on `Y`, namely all the structural effects within the model, therefore `POI = c("Y~X", "Y~Z", "Y~X:Z")`), the `method` is choosen to be `"UPI"`, which indicates that the unconstrained product indicator approach should be used (Marsh et al., 2004, Kelava & Brandt, 2009), `search_method` is choosen to be `"adaptive"`, an alternative would be `"bruteforce"` (see documentation for more details), 10 adaptive search `steps` are chosen with a `power_modeling_method` of `"probit"`, which means the significance decisions per parameter are modeled via a probit regression model. `R` is the total number of replications fitted (here 1000 is small, this number should be increased for higher precision, values much smaller may create unwanted behaviour of the search algorithm as the power-model might be to plane, a good suggestion is $R=10^5$). `power_aim` is the desired power level (here 0.8) for which the adaptive algorithm is optimized (and for which the $N$ is found), `alpha` is the corresponding Type I error rate for the significance decision per replication (level of significance, here 0.05), `alpha_power_modeling` is the Type I error rate used within the power modeling process, i.e., the confidence band used to derive the lower bound of power that is then used to solve for $\hat{N}$ which further enables that  $\hat{N}$ will ensure the desired power rate with Type I error `alpha_power_modeling` divided by 2, `CORES` are the number of computer cpu cores used to estimate the models (here 1 is chosen, this number should be increased to reduce runtime).  As this is a random search algorithm, we need to set a seed for comparison: `seed`.
+The argument `model` is given our previously stated model in `lavaan`-syntax, `POI` describe the **P**arameters **O**f **I**nterest (here we are interested in the power of the linear effect of `X` and `Z` on `Y` and the interaction between `X:Z` on `Y`, namely all the structural effects within the model, therefore `POI = c("Y~X", "Y~Z", "Y~X:Z")`), the `method` is choosen to be `"UPI"`, which indicates that the unconstrained product indicator approach should be used (Marsh et al., 2004, Kelava & Brandt, 2009), `search_method` is choosen to be `"adaptive"`, an alternative would be `"bruteforce"` (see documentation for more details), 2 adaptive search `steps` are chosen with a `power_modeling_method` of `"probit"`, which means the significance decisions per parameter are modeled via a probit regression model. `R` is the total number of replications fitted (here 200 is small, this number should be increased for higher precision, values much smaller may create unwanted behaviour of the search algorithm as the power-model might be to plane, a good suggestion is $R\ge 2000$ and for precise results better $R\ge 10^5$). `power_aim` is the desired power level (here 0.8) for which the adaptive algorithm is optimized (and for which the $N$ is found), `alpha` is the corresponding Type I error rate for the significance decision per replication (level of significance, here 0.05), `alpha_power_modeling` is the Type I error rate used within the power modeling process, i.e., the confidence band used to derive the lower bound of power that is then used to solve for $\hat{N}$ which further enables that  $\hat{N}$ will ensure the desired power rate with Type I error `alpha_power_modeling` divided by 2, `CORES` are the number of computer cpu cores used to estimate the models (here 1 is chosen, this number should be increased to reduce runtime).  As this is a random search algorithm, we need to set a seed for comparison: `seed`.
 
 The output object `Result_Power` is a list with the following objects:
 
@@ -216,7 +224,7 @@ All plots indicate that the linear effect of Z has the smallest power.
 
 One can also find other sample sizes for power values other than that the process has been optimized for by using the `reanalyze.powerNlSEM` function.
 
-```{r}
+```{r, warning=FALSE}
 reanalyse.powerNLSEM(Result_Power, 
                      powerLevels = c(.5, .6, .7, .8, .9, .95))
 ```
@@ -234,7 +242,7 @@ were we see that some of the power values actually fall out of the support for w
 
 Further, if we want more precision in the power modeling process we can alter `alpha_power_modeling` to a lower value.
 
-```{r, fig.width=7, fig.height=5, fig.align='center'}
+```{r, fig.width=7, fig.height=5, fig.align='center', warning=FALSE}
 reanalyse.powerNLSEM(Result_Power, 
                      powerLevels = c(.5, .6, .7, .8, .9),
      alpha_power_modeling = .001)
@@ -246,7 +254,7 @@ plot(Result_Power, se = TRUE,
 
 If we wish to not use confidence bands in the power modeling process we can use `alpha_power_modeling = 1`.
 
-```{r, fig.width=7, fig.height=5, fig.align='center'}
+```{r, fig.width=7, fig.height=5, fig.align='center', warning=FALSE}
 reanalyse.powerNLSEM(Result_Power, 
                      powerLevels = c(.5, .6, .7, .8, .9),
      alpha_power_modeling = 1)
@@ -287,11 +295,11 @@ y3~~.3*y3
 
 Now we fit the MSPE to estimate power for the effect `"Y~X"` for this linear SEM. We use `method = "UPI"` as the product indicator approach without any nonlinear effects simplifies to standard SEM.
 
-```{r}
+```{r, warning=FALSE}
 Simple <- powerNLSEM(model = populationModel, POI = c("Y~X"), method = "UPI",
-                     search_method = "adaptive", steps = 10, 
+                     search_method = "adaptive", steps = 2, 
                      power_modeling_method = "probit",
-                     R = 2000, power_aim = .8, alpha = .05, 
+                     R = 200, power_aim = .8, alpha = .05, 
                      seed = 2024, CORES = 1)
 ```
 
@@ -303,10 +311,10 @@ Simple$N
 
 Now, we simulate data for this particular sample size and compute the resulting power rate.
 
-```{r}
+```{r, warning=FALSE}
 VerifyRes <- powerNLSEM(model = populationModel, POI = c("Y~X"), method = "UPI",
                        search_method = "bruteforce", Ns = Simple$N,
-                       R = 2000, seed = 2024, CORES = 1)
+                       R = 200, seed = 2024, CORES = 1)
 ```
 
 The argument `$powersPerN` gives the power rate per selected sample size which is what we need here:
@@ -322,59 +330,8 @@ P_LB <- P - qnorm(.975)*sqrt(P*(1-P)/Reps)
 P_UB <- P + qnorm(.975)*sqrt(P*(1-P)/Reps)
 ```
 
-This power rate is close to the desired power rate of $.8$. In fact the confidence interval
-[`r round(P_LB, 3)`, `r round(P_UB, 3)`] just excludes $.8$. This is desired, as the computed required sample size is derived from the lower bound of the confidence band around the predicted power rate. Hence, with `alpha_power_modeling = .05`, we have that in 2.5% of cases the computed sample size will result in a power rate smaller than the desired power rate of .8. Hence, in most cases, the computed power rate will be larger. With increasing `R` this slight overestimation becomes smaller.
+This power rate is close to the desired power rate of $.8$. In fact the confidence interval [`r round(P_LB, 3)`, `r round(P_UB, 3)`] just excludes $.8$. This is desired, as the computed required sample size is derived from the lower bound of the confidence band around the predicted power rate. Hence, with `alpha_power_modeling = .05`, we have that in 2.5% of cases the computed sample size will result in a power rate smaller than the desired power rate of .8. Hence, in most cases, the computed power rate will be larger. With increasing `R` this slight overestimation becomes smaller.
 
-We now independently replicate this verification using the `simsem` package. First, we need to state an analysis model.
-The analysis model results by removing all `*` premultiplication of numbers.
-
-```{r}
-analysisModel <- "
-# measurement models
-X =~ 1*x1 + x2 + x3
-Y =~ 1*y1 + y2 + y3
-
-# structural models
-Y ~ X 
-
-# residual variances
-Y~~Y
-X~~X
-
-# measurement error variances
-x1~~x1
-x2~~x2
-x3~~x3
-y1~~y1
-y2~~y2
-y3~~y3
-"
-```
-
-Now we use the `sim` function of the `simsem` package (Pornprasertmanit et al., 2021). We fit 2000 data sets using stated population and analysis model. See documentation for further details.
-
-```{r, message=FALSE}
-library(simsem)
-SimSemList <- simsem::sim(nRep = 2000, model = analysisModel, 
-                        generate = populationModel, n = Simple$N, 
-                        lavaanfun = "sem", multicore = FALSE)
-```
-Then we compute the significance decision by computing the one-sided $p$-value and the power rate
-
-```{r}
-pvalues <- pnorm(as.matrix(SimSemList@coef) / as.matrix(SimSemList@se), 
-                 lower.tail = FALSE)[, "Y~X"]
-power <- mean(pvalues < .05)
-power
-```
-
-```{r, echo=FALSE}
-Psimsem_UB <- power + qnorm(.975)*sqrt(power*(1-power)/SimSemList@nRep)
-Psimsem_LB <- power - qnorm(.975)*sqrt(power*(1-power)/SimSemList@nRep)
-```
-
-This power rate, again, is close to the desired power rate of $.8$. In fact the confidence interval is
-[`r round(Psimsem_LB, 3)`, `r round(Psimsem_UB, 3)`] which includes $.8$. The required sample size was computed so the corresponding power rate approaches the desired power rate from above.
 
 
 ## Literature
@@ -394,7 +351,7 @@ Marsh, H. W., Wen, Z. & Hau, K. T. (2004). Structural equation models of latent 
 
 Muthén, L., & Muthén, B. (1998-2017). _Mplus user’s guide (Eighth ed.)_. Los Angeles, CA: Muthén & Muthén.
 
-Pornprasertmanit, S., Miller, P., Schoemann, A. M., Jorgensen, T. D. (2021). _simsem: SIMulated Structural Equation Modeling_. R package version 0.5-16, <https://CRAN.R-project.org/package=simsem>.
+<!-- Pornprasertmanit, S., Miller, P., Schoemann, A. M., Jorgensen, T. D. (2021). _simsem: SIMulated Structural Equation Modeling_. R package version 0.5-16, <https://CRAN.R-project.org/package=simsem>. -->
 
 Rosseel, Y. (2012). lavaan: An R package for structural equation modeling. _Journal of Statistical Software, 48_(2), 1–36. <https://doi.org/10.18637/jss.v048.i02>
 
